# FireShadow

./: .tool-versions  README.md
AWS/: README.md
Airflow/: Readme.md
DataEngineering/: Readme.md
DataScience/: README.md
Databricks/: Readme.md
Databricks/project/: fantasy.ipynb
DeepLearningForCoders/: 001.ipynb
DuckDb/: Readme.md
LLM/: README.md
MLOPS/: README.md
MachineLearning/: Readme.md
MachineLearningforEverybody /MAGICGammaTelescope/: magic.ipynb
Maths/: Readme.md
Metaflow/: Readme.md
NNFS/: README.md  pyproject.toml
NNFS/pytorch_recipes/: 1.ipynb  2.ipynb  3.py  4.py  model.pth
NNFS/src/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb
Notes/: README.md
OpenCV/: Readme.md
Project/flowair/: Readme.md  airflow.cfg  airflow.db
Project/flowair/logs/scheduler/: latest
Project/heart/: Readme.md  heart.ipynb
Project/streamlit/: Readme.md
RAG/: Readme.md
RecommendationEngine/: Readme.md
Snowflake/: Readme.md
Spark/: README.md
TimeSeries/: Readme.md
Vertex/: Readme.md
