[project]
name = "nnfs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hari Krishnan", email = "codeharik@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tensorboard>=2.18.0",
    "pandas>=2.2.3",
    "gym>=0.26.2",
    "numpy>=2.1.2",
    "pygame>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nnfs"]
